--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,6 +44,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "jest-junit": "^15.0.0"
+    "csp-html-webpack-plugin": "^5.1.0",
+    "customize-cra": "^1.0.0",
+    "jest-junit": "^15.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
