--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 #sonar.language=js
 sonar.sources=. 
 sonar.sourceEncoding=UTF-8
-
+sonar.organization=subzone
 # Optional
 # sonar.tests=server/build/test
  
