--- a/build.yaml
+++ b/build.yaml
@@ -27,3 +27,16 @@ steps:
     Destination: 'AzureBlob'
     storage: 'careerbaseweudev'
     ContainerName: '$web'
+
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'subzone'
+    scannerMode: 'CLI'
+    configMode: 'file'
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
