--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.3",
+    "emailjs-com": "^3.2.0",
     "history": "^5.3.0",
     "jest": "^29.3.1",
     "react": "^18.2.0",
