--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^5.3.0",
     "jest": "^29.3.1",
     "react": "^18.2.0",
+    "react-aad-msal": "^2.3.5",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
