--- a/build.yaml
+++ b/build.yaml
@@ -42,7 +42,14 @@ steps:
     Destination: 'AzureBlob'
     storage: 'careerbaseweudev'
     ContainerName: '$web'
-  
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build/'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
 - task: AzureRmWebAppDeployment@4
   inputs:
@@ -50,5 +57,5 @@ steps:
     azureSubscription: 'Azure subscription 1(1)(836dac06-9190-4ca2-980f-c1fa69e59375)'
     appType: 'webAppLinux'
     WebAppName: 'mymilenko'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/build/*'
+    packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     RuntimeStack: 'NODE|18-lts'
