Update build.yaml for Azure Pipelines

--- a/build.yaml
+++ b/build.yaml
@@ -45,7 +45,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build/'
+    rootFolderOrFile: 'build/'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
