Update build.yaml for Azure Pipelines

--- a/build.yaml
+++ b/build.yaml
@@ -45,7 +45,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: 'build/'
+    rootFolderOrFile: '/'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
@@ -59,3 +59,4 @@ steps:
     WebAppName: 'mymilenko'
     packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     RuntimeStack: 'NODE|18-lts'
+    StartupCommand: 'ng serve'
