--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^29.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
