--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,11 @@ on:
     branches:
       - master # Replace with your deployment branch
 
-env:
-  name: live
 
 jobs:
 
   deploy:
+    environment: live
     runs-on: ubuntu-latest
     
     steps:
@@ -21,8 +20,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
+        aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
         aws-region: eu-south-1 # Replace with your desired AWS region
 
     - name: Install Node.js
