--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
   
+    - name: Run Bash Script
+      run: |
+        rm -rf ~/.aws/credentials
+        
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
