--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Run Bash Script
       run: |
         rm -rf ~/.aws/credentials
+        unset AWS_SESSION_TOKEN
         
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
