--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
   
-    - name: Run Bash Script
-      run: |
-        rm -rf ~/.aws/credentials
-        unset AWS_SESSION_TOKEN
+    # - name: Run Bash Script
+    #   run: |
+    #     rm -rf ~/.aws/credentials
+    #     unset AWS_SESSION_TOKEN
         
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4.0.2
