--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,20 +15,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-  
-    # - name: Run Bash Script
-    #   run: |
-    #     rm -rf ~/.aws/credentials
-    #     unset AWS_SESSION_TOKEN
         
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4.0.2
-      with:
-        aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
-        aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
-        aws-region: eu-south-1 # Replace with your desired AWS region
-        role-to-assume: arn:aws:iam::730335451730:role/GH-action-access
-
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
@@ -43,7 +30,12 @@ jobs:
     - name: Deploy to S3
       run: |
         aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        env:
+          BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET }}
+          DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Invalidate CloudFront cache
       run: |
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
