--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,8 @@ jobs:
 
     - name: Build application
       run: npm run build
+      env: 
+        CI: false
 
     - name: Deploy to S3
       run: |
