--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --recursive --delete --debug
         env:
           BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET }}
           DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
