--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
           DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: eu-central-1
+          AWS_EC2_METADATA_SERVICE_NUM_ATTEMPTS: 5
+          AWS_EC2_METADATA_SERVICE_TIMEOUT: 1
 
     - name: Invalidate CloudFront cache
       run: |
