--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete --debug --no-sign-request
+        aws s3 sync build/ s3://mymilenko.info --delete --debug --no-sign-request
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
