--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.7.0",
+    "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^3.1.1"
   },
